--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://DCampbellCreative.github.io/VitePortfolio",
+  "homepage": "https://dcampbellcreative.github.io/VitePortfolio/",
   "name": "viteportfolio",
   "private": false,
   "version": "0.0.0",
